# compe_utils

./: README.md  pyproject.toml
EDA/: EDA.py  correlation_ratio.py  kernel_densty.py
Interpret/: PD.py
Postprocessing/: emsemble.py  optimization.py
Utils/: Log.py  make_folder.py  memory.py  wandb.py
feature/: agg_feature.py  base_feature_block.py  create_feature.py  knn_feature.py  statistic_feature.py
models/: model.cat.py  model_catboost.py  model_knn.py  model_lgb.py  model_lgbm.py  model_tabnet.py  model_xgb.py  transformer.py
models/pytoch/: LSTM_model.py  NN_model.py  setting.py
pytoch/: pytorch_simple_model.py
training/: custom_loss.py  feature_importance.py  validation.py
